-Improviments: corrections in metods deprecated

--- a/src/net/atlanticbb/tantlinger/shef/messages_es.properties
+++ b/src/net/atlanticbb/tantlinger/shef/messages_es.properties
@@ -6,13 +6,13 @@ rich_text=Texto Rico
 file.mnemonic=A
 align.mnemonic=n
 insert.mnemonic=I
-size=Tama\u00F1o
+size=Tama\u00f1o
 edit=Editar
 source=Fuente
 paragraph.mnemonic=P
 align=Alinear
-format=Formato
-delete=Cancelaci\u00F3n
+format=Formatar
+delete=Cancelaci\u00f3n
 table=Tabla
 list=Lista
 edit.mnemonic=E
