--- a/src/net/atlanticbb/tantlinger/shef/messages_pt_br.properties
+++ b/src/net/atlanticbb/tantlinger/shef/messages_pt_br.properties
@@ -13,7 +13,7 @@ edit=Editar
 source=C\u00f3digo Fonte
 paragraph.mnemonic=P
 align=Alinhar
-format=Formato
+format=Formatar
 style=Estilo
 delete=Excluir
 edit.mnemonic=E
